2008-07-08  Sebastien Pouliot  <sebastien@ximian.com>

	* NonConstantStaticFieldsShouldNotBeVisibleRule.cs: Remove "public
	const string". Anyway it was not required since it was a "constant"
	message (and [Solution] handle this a lot better).
	* Makefile.am: Rebuild if the framework has changed.

2008-05-25  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotLockOnThisOrTypesRule.cs: New. Rule to report when lock(this)
	or lock(typeof(X)) is being used.
	* DoNotLockOnWeakIdentityObjectsRule.cs: New. Rule to report when
	a lock is done on an object with a weak identity.
	* LockAnalyzerRule.cs: Base class for both new rules.
	* Gendarme.Rules.Concurrency.mdp: Update MD project file
	* Makefile.am: Add new rules/tests to build.

2008-05-24  Sebastien Pouliot  <sebastien@ximian.com>

	* DontUseLockedRegionOutsideMethod.cs: Override Initialize to avoid
	executing the rule unless the current module use the Monitor class.

2008-05-05  Andres G. Aragoneses <aaragoneses@novell.com> 

	* DoubleCheckLockingRule.cs: More concrete link.

2008-05-05  Andres G. Aragoneses <aaragoneses@novell.com> 

	* DoubleCheckLockingRule.cs: Add an informative comment.

2008-04-26  Sebastien Pouliot  <sebastien@ximian.com>

	* DontUseLockedRegionOutsideMethod.cs: Add missing reporting (not 
	very accurate now) and simplified logic a bit while making it work 
	with my new test case.

2008-04-26  Andres G. Aragoneses <aaragoneses@novell.com> 

	* Gendarme.Rules.Concurrency.mdp, DontUseLockedRegionOutsideMethod.cs:
	  My first rule with its tests! It's very simple but more will come
	  (noted in the TODO's). I hope it works because I cannot check it
	  right now, the Gendarme.Tests are failing compilation for me.

2008-04-11  Nestor Salceda  <nestor.salceda@gmail.com>

	* NonConstantStaticFieldsShouldNotBeVisibleRule.cs: Fix the spelling
	error in the error message.

2008-04-05  Sebastien Pouliot  <sebastien@ximian.com>

	* DoubleCheckLockingRule.cs: Optimization by using Initialize 